welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: expected class or object definition
def brosse(){
^PictureMono2:9: error: expected class or object definition
  def faireV(){
  ^PictureMono2:23: error: expected class or object definition
  def faireMotif(){
  ^PictureMono2:28: error: expected class or object definition
  def faireLigne(){
  ^PictureMono2:34: error: expected class or object definition
  def faireCarre(){
  ^